finihsed with sequelize database seeders, migrations, and models

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "seed": "npx sequelize-cli db:seed:all",
     "seed:migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate && npm run seed",
     "pretest": "cross-env NODE_ENV=test npm run seed:migrate:reset",
-    "test": "cross-env NODE_ENV=test nyc --reporter=html mocha ./test/main.js --testTimeout=10000 --exit",
+    "test": "cross-env NODE_ENV=test mocha ./test/main.js --testTimeout=10000 --exit",
     "no-pretest": "cross-env NODE_ENV=test mocha ./test/main.js --testTimeout=10000 --exit",
     "mutate": "npm run pretest && cross-env NODE_ENV=test npx stryker run"
   },
