--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "mocha": "^10.2.0",
     "node-mocks-http": "^1.13.0",
     "nodemon": "^3.0.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "safe-regex": "^2.1.1"
   },
   "name": "traveling-merchant",
   "description": "",
