--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "start-dev": "nodemon app.js",
+    "dev": "nodemon app.js",
     "lint": "eslint ./",
     "lint-fix": "eslint ./ --fix",
     "migrate": "npx sequelize-cli db:migrate",
